# securepdf

./: .gitignore  INSTALL.md  README.md  SECURITY.md  pyproject.toml  securepdf.spec
.github/: dependabot.yml
src/securepdf/: __init__.py
src/securepdf/batch/: __init__.py  pipeline.py
src/securepdf/detection/: __init__.py  custom_entities.py  financial_recognizers.py  gemma_detector.py  merger.py  models.py  ollama_client.py  phi_recognizers.py  pipeline.py  presidio_engine.py  span_mapping.py
src/securepdf/gui/: __init__.py  __main__.py  about_dialog.py  app.py  detection_panel.py  document_session.py  entity_editor.py  main_window.py  onboarding.py  pdf_viewer.py  save_dialog.py  settings_dialog.py  style.py  welcome_widget.py  worker.py
src/securepdf/pdf/: __init__.py  extractor.py  models.py  ocr.py  pipeline.py
src/securepdf/redaction/: __init__.py  pdf_renderer.py  pipeline.py  pseudonyms.py  text_export.py
tests/: conftest.py  test_batch.py  test_custom_entities.py  test_extraction.py  test_financial_recognizers.py  test_gemma_detector.py  test_gui_about_dialog.py  test_gui_detection_panel.py  test_gui_document_session.py  test_gui_entity_editor.py  test_gui_onboarding.py  test_gui_save_dialog.py  test_gui_smoke.py  test_gui_welcome.py  test_gui_worker.py  test_merger.py  test_ollama_client.py  test_pdf_renderer.py  test_phi_recognizers.py  test_presidio_engine.py  test_pseudonyms.py  test_redaction_pipeline.py  test_span_mapping.py  test_text_export.py
