[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securepdf"
version = "0.5.1"
description = "Local AI PDF redaction & anonymization — strip sensitive data before sending docs to cloud LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SecurePDF" }]

# Phase 1 — PDF I/O + OCR.
# Phase 2 — Detection: Presidio (Stage 1) + Ollama/Gemma (Stage 2).
# Phase 4 GUI (PySide6) deps come later.
dependencies = [
    # Lower bounds tightened in v0.5.1 to versions free of known CVEs as of
    # release; upper bounds prevent surprise major-version breakage.
    "pymupdf>=1.24.10,<2",       # PDF text extraction WITH bboxes + true redaction primitives
    "pytesseract>=0.3.10,<1",    # Python wrapper over the system `tesseract` binary
    "Pillow>=10.4.0,<13",        # Image handling for OCR page rendering (10.4+ CVE-fixed)
    "presidio-analyzer>=2.2.355,<3",  # Stage 1: PII detection engine
    "spacy>=3.7,<4",             # NER backbone used by Presidio
    "requests>=2.32.0,<3",       # HTTP client for Ollama API (honors HTTPS_PROXY)
    "PyYAML>=6.0.1,<7",          # Custom entity profile loading
    "PySide6>=6.6,<7",           # Desktop GUI (Phase 4)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Larger spaCy model for production (better PERSON/LOCATION recall).
# Tests use the small model (auto-installed) so CI stays fast.
prod = [
    # Install via: `python -m spacy download en_core_web_lg`
]

[project.scripts]
securepdf-extract = "securepdf.pdf.pipeline:_cli"
securepdf-detect = "securepdf.detection.pipeline:_cli"
securepdf-redact = "securepdf.redaction.pipeline:_cli"
securepdf-batch = "securepdf.batch.pipeline:_cli"
securepdf-gui = "securepdf.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
